--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <meta name="theme-color" content="#000">
     <!-- Custom Browsers Color End -->
     <link rel="stylesheet" href="css/main.min.css">
+    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet">-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>-->
+
 </head>
 <body>
 
@@ -23,6 +26,16 @@
         <!--header-->
         <header>
             <div class="content">
+
+                <div class="cloud1">
+                    <img src="img/header/cloud1.png" alt="">
+                </div>
+                <div class="cloud2">
+                    <img src="img/header/cloud2.png" alt="">
+                </div>
+                <div class="cloud3">
+                    <img src="img/header/cloud3.png" alt="">
+                </div>
                 <nav>
                     <div class="logo">
                         <a href="/">
@@ -30,6 +43,10 @@
                         </a>
                     </div>
                     <div class="login-box">
+                        <div class="mobile-menu">
+                            <button><i class="fa fa-bars"></i></button>
+                        </div>
+
                         <ul>
                             <li><a href="">Sign In</a></li>
                             <li><a href="">Sign Up</a></li>
@@ -53,7 +70,6 @@
         </div>
         <!--search end-->
     </section>
-
 
     <section class="available">
         <div class="content">
@@ -230,6 +246,9 @@
         <div class="content-full">
             <div class="content">
                 <div class="title">
+                    <div class="cloud4">
+                        <img src="img/home/discover/cloud-dis.png" alt="">
+                    </div>
                     <h1>Discover home trends in your market</h1>
                     <p>
                         Hand-selected by local experts, these homes — curated by design, amenities, and neighborhood —
@@ -240,9 +259,9 @@
             </div>
             <div class="discover-wrapp">
                 <div class="dis-box left">
-                    <div class="left-box">
+                    <!--<div class="left-box">-->
                         <img src="img/home/discover/left-bg.png" >
-                    </div>
+                    <!--</div>-->
 
 
                 </div>
@@ -255,6 +274,7 @@
                         <li><a href=""><img src="img/home/discover/android.png" alt=""></a></li>
                         <li><a href=""><img src="img/home/discover/ios.png" alt=""></a></li>
                     </ul>
+
                 </div>
             </div>
         </div>
@@ -319,7 +339,7 @@
                     </select>
                 </div>
                 <div class="footer-item">
-                    <ul>
+                    <ul class="social-list">
                         <li><a href=""><img src="img/footer/social/fb.svg" alt="fb"></a></li>
                         <li><a href=""><img src="img/footer/social/tw.svg" alt="tw"></a></li>
                         <li><a href=""><img src="img/footer/social/gogle.svg" alt="gogle"></a></li>
@@ -329,10 +349,11 @@
             </div>
         </div>
     </footer>
+
 </main>
 
 <script src="js/scripts.min.js"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
 </body>
 </html>
