Profile, reset, login, register

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
                             <button><i class="fa fa-bars"></i></button>
                         </div>
 
-                        <ul>
+                        <ul class="login-list">
                             <li><a href="">Sign In</a></li>
                             <li><a href="">Sign Up</a></li>
                         </ul>
