--- a/app/change_password.html
+++ b/app/change_password.html
@@ -2,7 +2,7 @@
 <html lang="ru">
    <head>
       <meta charset="utf-8">
-      <title>Immago Homepage</title>
+      <title>Change Password</title>
       <meta name="description" content="">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -18,7 +18,7 @@
    <body>
       <main class="homepage">
          <!--header-->
-         <header>
+         <header class="border">
             <div class="content">
                <nav>
                   <div class="logo">
@@ -46,7 +46,7 @@
                </nav>
             </div>
          </header>
-         <!--header end-->
+         <!--reset-password-->
          <section class="reset-password">
             <div class="content">
                <div class="reset-password-wrapp">
@@ -126,7 +126,6 @@
                </div>
             </div>
          </footer>
-         <!--footer end-->
       </main>
       <script src="js/scripts.min.js"></script>
    </body>
