--- a/app/login.html
+++ b/app/login.html
@@ -16,6 +16,7 @@
       <link rel="stylesheet" href="css/main.min.css">
    </head>
    <body>
+      <!--login-->
       <section class="login">
          <div class="login-wrapp">
             <div class="login-box login-left">
@@ -46,12 +47,12 @@
                         <li><a href="#"><img src="img/register/facebook.png"/></a></li>
                         <li><a href="#"><img src="img/register/google-plus.png" /></a></li>
                      </ul>
-                     <p>Don't have an account?<a href="#">  CLICK TO SIGN UP</a></p>
+                     <p>Don't have an account?<a href="register.html">  CLICK TO SIGN UP</a></p>
                   </div>
                </form>
             </div>
             <div class="login-box login-right">
-               <div class="cloud1">
+               <div class="login-cloud1">
                   <img src="img/header/cloud1.png" alt="cloud">
                </div>
                <img src="img/login/login-bg.png" >
