--- a/app/login_after.html
+++ b/app/login_after.html
@@ -6,13 +6,10 @@
       <meta name="description" content="">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <!-- Template Basic Images Start -->
-      <meta property="og:image" content="path/to/image.jpg">
+      <meta property="og:image" content="img/favicon/favicon.png">
       <link rel="icon" href="img/favicon/favicon.png">
       <link rel="apple-touch-icon" sizes="32x32" href="img/favicon/favicon.png">
-      <!-- Custom Browsers Color Start -->
       <meta name="theme-color" content="#000">
-      <!-- Custom Browsers Color End -->
       <link rel="stylesheet" href="css/main.min.css">
    </head>
    <body>
@@ -47,7 +44,6 @@
                   </nav>
                </div>
             </header>
-            <!--header end-->
          </section>
       </main>
       <script src="js/scripts.min.js"></script>
