--- a/app/register.html
+++ b/app/register.html
@@ -16,6 +16,8 @@
       <link rel="stylesheet" href="css/main.min.css">
    </head>
    <body>
+
+      <!--register-->
       <section class="register">
          <div class="register-wrapp">
             <div class="register-box register-left">
@@ -60,7 +62,7 @@
                         <li><a href="#"><img src="img/register/facebook.png"/></a></li>
                         <li><a href="#"><img src="img/register/google-plus.png" /></a></li>
                      </ul>
-                     <p>Already have an account? <a href="#"> CLICK TO LOGIN</a></p>
+                     <p>Already have an account? <a href="login.html"> CLICK TO LOGIN</a></p>
                   </div>
                </form>
             </div>
