--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,6 @@
       <meta name="theme-color" content="#000">
       <!-- Custom Browsers Color End -->
       <link rel="stylesheet" href="css/main.min.css">
-      <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet">-->
-      <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>-->
    </head>
    <body>
       <main class="homepage">
@@ -50,7 +48,6 @@
                   </nav>
                </div>
             </header>
-            <!--header end-->
             <!--search-->
             <div class="search">
                <div class="content">
@@ -282,6 +279,7 @@
                </div>
             </div>
          </section>
+         <!--footer-->
          <footer>
             <div class="content">
                <div class="footer-wrapp">
