--- a/app/profile.html
+++ b/app/profile.html
@@ -6,19 +6,16 @@
       <meta name="description" content="">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <!-- Template Basic Images Start -->
       <meta property="og:image" content="path/to/image.jpg">
       <link rel="icon" href="img/favicon/favicon.png">
       <link rel="apple-touch-icon" sizes="32x32" href="img/favicon/favicon.png">
-      <!-- Custom Browsers Color Start -->
       <meta name="theme-color" content="#000">
-      <!-- Custom Browsers Color End -->
       <link rel="stylesheet" href="css/main.min.css">
    </head>
    <body>
       <main class="homepage">
          <!--header-->
-         <header>
+         <header  class="border">
             <div class="content">
                <nav>
                   <div class="logo">
@@ -46,7 +43,6 @@
                </nav>
             </div>
          </header>
-         <!--header end-->
          <!--profile section-->
          <section class="profile">
             <div class="content">
@@ -77,7 +73,7 @@
                               <p>Contact information</p>
                            </div>
                            <div class="info-right">
-                              <a class="edit" href=""><img src="img/profile/edit.svg" alt="edit">Edit account</a>
+                              <a class="edit" href="edit.html"><img src="img/profile/edit.svg" alt="edit">Edit account</a>
                            </div>
                         </div>
                         <div class="prof-info-box">
@@ -138,7 +134,6 @@
                </div>
             </div>
          </section>
-         <!--profile section end-->
          <!--footer-->
          <footer>
             <div class="content">
@@ -181,7 +176,6 @@
                </div>
             </div>
          </footer>
-         <!--footer end-->
       </main>
       <script src="js/scripts.min.js"></script>
    </body>
