--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,7 @@
                         <!--first 4 item-->
                         <div class="slider-item">
                            <figure>
-                              <span class="fav"><img src="img/home/slider/like.svg" alt="like"></span>
+                              <span class="fav"><img src="img/home/slider/star.svg" alt="like"></span>
                               <img src="img/home/slider/slide1.jpg" alt="slide1">
                            </figure>
                            <div class="information">
@@ -79,7 +79,7 @@
                               <h3>Modern house in Hamburg, Germany</h3>
                               <div class="info-box fr">
                                  <p><img src="img/home/slider/location.svg" alt="location">Lemsahl-Mellingstedt</p>
-                                 <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                 <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                               </div>
                               <div class="info-box">
                                  <p><span class="price">$ 4587</span><span class="rent"> /  rent</span></p>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="slider-item">
                            <figure>
-                              <span class="fav"><img src="img/home/slider/like.svg" alt="like"></span>
+                              <span class="fav"><img src="img/home/slider/star.svg" alt="like"></span>
                               <img src="img/home/slider/slide2.png" alt="slide1">
                            </figure>
                            <div class="information">
@@ -97,7 +97,7 @@
                               <h3>Modern house in Hamburg, Germany</h3>
                               <div class="info-box fr">
                                  <p><img src="img/home/slider/location.svg" alt="location">Lemsahl-Mellingstedt</p>
-                                 <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                 <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                               </div>
                               <div class="info-box">
                                  <p><span class="price">$ 4587</span><span class="rent"> /  rent</span></p>
@@ -107,7 +107,7 @@
                         </div>
                         <div class="slider-item">
                            <figure>
-                              <span class="fav"><img src="img/home/slider/like.svg" alt="like"></span>
+                              <span class="fav"><img src="img/home/slider/star.svg" alt="like"></span>
                               <img src="img/home/slider/slide3.png" alt="client">
                            </figure>
                            <div class="information">
@@ -115,7 +115,7 @@
                               <h3>Modern house in Hamburg, Germany</h3>
                               <div class="info-box fr">
                                  <p><img src="img/home/slider/location.svg" alt="location">Lemsahl-Mellingstedt</p>
-                                 <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                 <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                               </div>
                               <div class="info-box">
                                  <p><span class="price">$ 4587</span><span class="rent"> /  rent</span></p>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="slider-item">
                            <figure>
-                              <span class="fav"><img src="img/home/slider/like.svg" alt="like"></span>
+                              <span class="fav"><img src="img/home/slider/star.svg" alt="like"></span>
                               <img src="img/home/slider/slide4.png" alt="client">
                            </figure>
                            <div class="information">
@@ -133,7 +133,7 @@
                               <h3>Modern house in Hamburg, Germany</h3>
                               <div class="info-box fr">
                                  <p><img src="img/home/slider/location.svg" alt="location">Lemsahl-Mellingstedt</p>
-                                 <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                 <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                               </div>
                               <div class="info-box">
                                  <p><span class="price">$ 4587</span><span class="rent"> /  rent</span></p>
@@ -144,7 +144,7 @@
                         <!--second 4 item-->
                         <div class="slider-item">
                            <figure>
-                              <span class="fav"><img src="img/home/slider/like.svg" alt="like"></span>
+                              <span class="fav"><img src="img/home/slider/star.svg" alt="like"></span>
                               <img src="img/home/slider/slide1.jpg" alt="slide1">
                            </figure>
                            <div class="information">
@@ -152,7 +152,7 @@
                               <h3>Modern house in Hamburg, Germany</h3>
                               <div class="info-box fr">
                                  <p><img src="img/home/slider/location.svg" alt="location">Lemsahl-Mellingstedt</p>
-                                 <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                 <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                               </div>
                               <div class="info-box">
                                  <p><span class="price">$ 4587</span><span class="rent"> /  rent</span></p>
@@ -162,7 +162,7 @@
                         </div>
                         <div class="slider-item">
                            <figure>
-                              <span class="fav"><img src="img/home/slider/like.svg" alt="like"></span>
+                              <span class="fav"><img src="img/home/slider/star.svg" alt="like"></span>
                               <img src="img/home/slider/slide2.png" alt="slide1">
                            </figure>
                            <div class="information">
@@ -170,7 +170,7 @@
                               <h3>Modern house in Hamburg, Germany</h3>
                               <div class="info-box fr">
                                  <p><img src="img/home/slider/location.svg" alt="location">Lemsahl-Mellingstedt</p>
-                                 <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                 <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                               </div>
                               <div class="info-box">
                                  <p><span class="price">$ 4587</span><span class="rent"> /  rent</span></p>
@@ -180,7 +180,7 @@
                         </div>
                         <div class="slider-item">
                            <figure>
-                              <span class="fav"><img src="img/home/slider/like.svg" alt="like"></span>
+                              <span class="fav"><img src="img/home/slider/star.svg" alt="like"></span>
                               <img src="img/home/slider/slide3.png" alt="client">
                            </figure>
                            <div class="information">
@@ -188,7 +188,7 @@
                               <h3>Modern house in Hamburg, Germany</h3>
                               <div class="info-box fr">
                                  <p><img src="img/home/slider/location.svg" alt="location">Lemsahl-Mellingstedt</p>
-                                 <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                 <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                               </div>
                               <div class="info-box">
                                  <p><span class="price">$ 4587</span><span class="rent"> /  rent</span></p>
@@ -198,7 +198,7 @@
                         </div>
                         <div class="slider-item">
                            <figure>
-                              <span class="fav"><img src="img/home/slider/like.svg" alt="like"></span>
+                              <span class="fav"><img src="img/home/slider/star.svg" alt="like"></span>
                               <img src="img/home/slider/slide4.png" alt="client">
                            </figure>
                            <div class="information">
@@ -206,7 +206,7 @@
                               <h3>Modern house in Hamburg, Germany</h3>
                               <div class="info-box fr">
                                  <p><img src="img/home/slider/location.svg" alt="location">Lemsahl-Mellingstedt</p>
-                                 <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                 <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                               </div>
                               <div class="info-box">
                                  <p><span class="price">$ 4587</span><span class="rent"> /  rent</span></p>
