--- a/app/myfavorite.html
+++ b/app/myfavorite.html
@@ -41,7 +41,7 @@
             <div class="content">
                 <div class="fav-result-product">
                     <div class="search-product-box">
-                        <p>Search result (45)</p>
+                        <p>My Favorites (10)</p>
                     </div>
 
                 </div>
@@ -74,7 +74,7 @@
                             </div>
                             <div class="product-box-wr">
                                 <div class="pr-box">
-                                    <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                    <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                                 </div>
                                 <div class="pr-box">
                                     <p><img src="img/home/slider/house.svg" alt="location">316 m²</p>
@@ -111,7 +111,7 @@
                             </div>
                             <div class="product-box-wr">
                                 <div class="pr-box">
-                                    <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                    <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                                 </div>
                                 <div class="pr-box">
                                     <p><img src="img/home/slider/house.svg" alt="location">316 m²</p>
@@ -148,7 +148,7 @@
                             </div>
                             <div class="product-box-wr">
                                 <div class="pr-box">
-                                    <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                    <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                                 </div>
                                 <div class="pr-box">
                                     <p><img src="img/home/slider/house.svg" alt="location">316 m²</p>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="product-box-wr">
                                 <div class="pr-box">
-                                    <p><img src="img/home/slider/bed.svg" alt="bed">rooms</p>
+                                    <p><img src="img/home/slider/bed.svg" alt="bed">2 rooms</p>
                                 </div>
                                 <div class="pr-box">
                                     <p><img src="img/home/slider/house.svg" alt="location">316 m²</p>
