--- a/app/payment.html
+++ b/app/payment.html
@@ -134,6 +134,10 @@
 
 
             </div>
+
+            <div class="btn-payment">
+                <button>Pay Now!</button>
+            </div>
         </div>
     </section>
     <!--footer-->
