--- a/app/index.html
+++ b/app/index.html
@@ -49,12 +49,17 @@
                </div>
             </header>
             <!--search-->
+
+
+
+
+
             <div class="search">
                <div class="content">
                   <h1>Renting Done Right. Finally.</h1>
-                  <form action="">
+                  <form action="" autocomplete="on">
                      <div class="form-group">
-                        <input type="text" placeholder="e.g. Neapol">
+                        <input type="text" placeholder="e.g. Neapol" name="sq">
                         <button><img src="img/header/search.svg" alt="search"></button>
                      </div>
                   </form>
