--- a/app/index.html
+++ b/app/index.html
@@ -50,10 +50,25 @@
             <div class="search">
                <div class="content">
                   <h1>Renting Done Right. Finally.</h1>
-                  <form action="" autocomplete="on">
+                  <form action="" autocomplete="off">
                      <div class="form-group">
-                        <input type="text" placeholder="e.g. Neapol" name="sq">
+                        <input class="home-search" type="text" placeholder="e.g. Neapol" name="sq">
                         <button><img src="img/header/search.svg" alt="search"></button>
+                     </div>
+                     <div class="search-result-list" style="display: none;">
+                        <ul>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                           <li>Bremen Germany</li>
+                        </ul>
                      </div>
                   </form>
                </div>
