--- a/app/search_result.html
+++ b/app/search_result.html
@@ -49,6 +49,13 @@
                                     <li>Bremen Germany</li>
                                     <li>Bremen Germany</li>
                                     <li>Bremen Germany</li>
+                                    <li>Bremen Germany</li>
+                                    <li>Bremen Germany</li>
+                                    <li>Bremen Germany</li>
+                                    <li>Bremen Germany</li>
+                                    <li>Bremen Germany</li>
+                                    <li>Bremen Germany</li>
+                                    <li>Bremen Germany</li>
                                 </ul>
                             </div>
                         </div>
